qtdemux: offset samples according to edit list

https://bugzilla.gnome.org/show_bug.cgi?id=700264